log
Thu, Mar 20, 2025  5:30:16 PM: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:36: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
       if (i == 1) pushFront(lista, *elemento);
                                    ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:17:6: note: expected 'void *' but argument is of type 'int'
 void pushFront(List *L, void *dato);
      ^~~~~~~~~
In file included from test.c:5:0:
exercises.c:50:31: error: passing argument 2 of 'pushCurrent' makes pointer from integer without a cast [-Werror=int-conversion]
       else pushCurrent(lista, *elemento);
                               ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushCurrent(List *L, void *dato);
      ^~~~~~~~~~~
In file included from test.c:5:0:
exercises.c: At top level:
exercises.c:56:1: error: "/*" within comment [-Werror=comment]
 /*
  
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Thu, Mar 20, 2025  5:31:06 PM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:49:36: error: passing argument 2 of 'pushFront' makes pointer from integer without a cast [-Werror=int-conversion]
       if (i == 1) pushFront(lista, *elemento);
                                    ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:17:6: note: expected 'void *' but argument is of type 'int'
 void pushFront(List *L, void *dato);
      ^~~~~~~~~
In file included from test.c:5:0:
exercises.c:50:31: error: passing argument 2 of 'pushCurrent' makes pointer from integer without a cast [-Werror=int-conversion]
       else pushCurrent(lista, *elemento);
                               ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushCurrent(List *L, void *dato);
      ^~~~~~~~~~~
In file included from test.c:5:0:
exercises.c: At top level:
exercises.c:56:1: error: "/*" within comment [-Werror=comment]
 /*
  
cc1.exe: all warnings being treated as errors
Compilation failed
450f7a3
Thu, Mar 20, 2025  5:31:18 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
1c2af2a
Thu, Mar 20, 2025  5:33:26 PM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
cd5b265
Thu, Mar 20, 2025  5:40:03 PM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:64:15: error: dereferencing 'void *' pointer [-Werror]
       suma += *current;
               ^~~~~~~~
exercises.c:64:15: error: void value not ignored as it ought to be
exercises.c:60:8: error: unused variable 'talla' [-Werror=unused-variable]
    int talla = get_size(L);
        ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
66ba72d
Thu, Mar 20, 2025  5:41:15 PM: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
       suma += *current;
               ^~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
d6a1cfb
Thu, Mar 20, 2025  5:41:27 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:63:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += current;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
29156aa
Thu, Mar 20, 2025  5:41:44 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
c3e38ae
Thu, Mar 20, 2025  5:43:15 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:18: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int current = first(L);
                  ^~~~~
exercises.c:62:18: error: comparison between pointer and integer [-Werror]
    while(current != NULL){
                  ^~
exercises.c:64:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       current = next(L);
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
3e90750
Thu, Mar 20, 2025  5:45:06 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:63:15: error: dereferencing 'void *' pointer [-Werror]
       suma += *(current);
               ^~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
cc1.exe: all warnings being treated as errors
Compilation failed
028c7ec
Thu, Mar 20, 2025  5:45:20 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:63:12: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       suma += current;
            ^~
cc1.exe: all warnings being treated as errors
Compilation failed
cbb6548
Thu, Mar 20, 2025  5:46:53 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
cccfc33
Thu, Mar 20, 2025  5:59:12 PM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
204d2f7
Thu, Mar 20, 2025  6:14:24 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  3|2
total_score: 40/70
039c6a4
